[gd_scene load_steps=17 format=3 uid="uid://dbpc4tsfn1j7b"]

[ext_resource type="FontFile" uid="uid://cdxdc35xww8br" path="res://fnt/whitrabt.ttf" id="1_5rus7"]
[ext_resource type="Script" path="res://src/intro_controller.gd" id="2_uewqd"]
[ext_resource type="Texture2D" uid="uid://c020lbkp65ok6" path="res://img/stats1.png" id="3_27ycs"]
[ext_resource type="Script" path="res://src/stat_button.gd" id="4_7pd7c"]
[ext_resource type="RichTextEffect" uid="uid://d1cvchqrtacfk" path="res://fnt/type_effect.tres" id="5_hy684"]
[ext_resource type="Texture2D" uid="uid://cjdbsxt0bfpid" path="res://img/backpack1.png" id="6_3o18u"]
[ext_resource type="Script" path="res://src/inv_button.gd" id="7_vshm8"]
[ext_resource type="AudioStream" uid="uid://b23k047b7ly05" path="res://snd/wasteland_windy.mp3" id="8_vpj63"]
[ext_resource type="AudioStream" uid="uid://ca06cceiy6yfu" path="res://snd/static.mp3" id="9_lttv6"]

[sub_resource type="Theme" id="Theme_rmt0s"]
default_font = ExtResource("1_5rus7")
default_font_size = 24
/colors/Color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgiw1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ImageTexture" id="ImageTexture_6mxy6"]

[sub_resource type="Animation" id="Animation_hlci4"]
resource_name = "effect_text_anim"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/EffectTextArea:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5, 4.5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_n2t3i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/EffectTextArea:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel/HBoxContainer/VBoxContainer/SceneImageTexRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_05h0i"]
resource_name = "screen_fade_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel/HBoxContainer/VBoxContainer/SceneImageTexRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bl3nb"]
_data = {
"RESET": SubResource("Animation_n2t3i"),
"effect_text_anim": SubResource("Animation_hlci4"),
"screen_fade_anim": SubResource("Animation_05h0i")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_rmt0s")
script = ExtResource("2_uewqd")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dgiw1")

[node name="StatButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.004
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 11.808
offset_right = -1320.0
offset_bottom = -968.0
toggle_mode = true
icon = ExtResource("3_27ycs")
expand_icon = true
script = ExtResource("4_7pd7c")

[node name="PlayerTextArea" type="RichTextLabel" parent="Panel/StatButton"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_right = 256.0
offset_bottom = 232.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_constants/line_separation = 10
text = "Hit Points: 
Mental State: 
Fitness: 
Tenacity: 
Acuity: 
Uncanny: 
Fortune: "
custom_effects = [ExtResource("5_hy684")]
visible_characters_behavior = 1

[node name="InvButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.004
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1320.0
offset_top = 11.808
offset_right = -16.0
offset_bottom = -968.0
toggle_mode = true
icon = ExtResource("6_3o18u")
expand_icon = true
script = ExtResource("7_vshm8")

[node name="InventoryTextArea" type="RichTextLabel" parent="Panel/InvButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
offset_top = 80.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
text = "Food: 
Water: 
Inventory:

Traits:

"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SceneImageTexRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = SubResource("ImageTexture_6mxy6")
expand_mode = 3
stretch_mode = 5

[node name="PromptTextArea" type="RichTextLabel" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
mouse_filter = 1
theme_override_colors/default_color = Color(0, 1, 0, 1)
bbcode_enabled = true
fit_content = true
scroll_active = false
custom_effects = [ExtResource("5_hy684")]
threaded = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="VBoxContainer5" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2
size_flags_vertical = 3
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="ChoiceContainer" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="EffectTextArea" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 80.0
offset_right = 400.0
offset_bottom = 432.0
visible_characters = 0
visible_ratio = 0.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_vpj63")
autoplay = true
mix_target = 1

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_lttv6")
volume_db = -20.0
autoplay = true
mix_target = 1
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bl3nb")
}
